--- a/index.html
+++ b/index.html
@@ -1,11 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Document</title>
-		<script src="scripts.js"></script>
-	</head>
-	<body></body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <script src="scripts.js" defer></script>
+  </head>
+  <body>
+    <div>
+      <h1>SCOREBOARD</h1>
+      <h1 id="player-score">Player: 0</h1>
+      <h1 id="computer-score">Computer: 0</h1>
+    </div>
+
+    <div id="container">
+      <button class="hand">Rock</button>
+      <button class="hand">Paper</button>
+      <button class="hand">Scissors</button>
+    </div>
+
+    <div id="cpu-button-container">
+      <button class="cpu-hand">Rock</button>
+      <button class="cpu-hand">Paper</button>
+      <button class="cpu-hand">Scissors</button>
+    </div>
+  </body>
 </html>
