--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 
     <div id="container">
       <p>Player Selection</p>
-      <button class="hand">Rock</button>
-      <button class="hand">Paper</button>
-      <button class="hand">Scissors</button>
+      <button id="rock-btn">Rock</button>
+      <button id="paper-btn">Paper</button>
+      <button id="scissor-btn">Scissors</button>
     </div>
 
     <div id="cpu-button-container">
