--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <p>Player Selection</p>
       <button id="rock-btn">Rock</button>
       <button id="paper-btn">Paper</button>
-      <button id="scissor-btn">Scissors</button>
+      <button id="scissors-btn">Scissors</button>
     </div>
 
     <div id="cpu-button-container">
