Shows player's hand for the round

--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
       <h1 id="computer-score">Computer: 0</h1>
     </div>
 
-    <div id="container">
+    <div class="choice-container">
       <p>Player Selection</p>
-      <button id="rock-btn">Rock</button>
-      <button id="paper-btn">Paper</button>
-      <button id="scissors-btn">Scissors</button>
+      <button class="player-hand" id="rock-btn">Rock</button>
+      <button class="player-hand" id="paper-btn">Paper</button>
+      <button class="player-hand" id="scissors-btn">Scissors</button>
     </div>
 
-    <div id="cpu-button-container">
+    <div class="choice-container">
       <p>Computer Selection</p>
       <button class="cpu-hand">Rock</button>
       <button class="cpu-hand">Paper</button>
